--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Assets\FSM\Debug\FSMDebugHelper.cs" />
     <Compile Include="Assets\FSM\Engine\FSMEngine.cs" />
     <Compile Include="Assets\FSM\Engine\FSMEngineBehaviorProxy.cs" />
+    <Compile Include="Assets\FSM\Error\FSMActionProcessingError.cs" />
+    <Compile Include="Assets\FSM\Error\FSMTransitionProcessingError.cs" />
     <Compile Include="Assets\FSM\FSM.cs" />
     <Compile Include="Assets\FSM\FSMAction.cs" />
     <Compile Include="Assets\FSM\FSMState.cs" />
@@ -83,20 +85,8 @@
     <Compile Include="Assets\TimerFSMTest\Waiting\Transition\IsAnyKeyPressed.cs" />
     <Compile Include="Assets\TimerFSMTest\Waiting\Transition\IsTimeElapsed.cs" />
     <Compile Include="Assets\TimerFSMTest\Waiting\WaitingComponent.cs" />
-    <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
       <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.0f2/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -298,21 +288,6 @@
     </Reference>
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.0f2/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Advertisements.Editor">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/PackageCache/com.unity.ads@2.3.1/Runtime/UnityEngine.Advertisements.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/Loic/Documents/projects/BoundToTheMoon/FSM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.0f2/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
